[workspace]
members = ['./crates/zip', './fuzz']

[workspace.dependencies]
zip = { path = "./crates/zip" }

[package]
name = "infteor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
zip = { workspace = true, features = ["logging"]}
