[workspace]
members = ['./crates/huffman', './fuzz', './crates/lz78', './crates/bit_utils']

[workspace.dependencies]
huffman = { path = "./crates/huffman" }
bit_utils = { path = "./crates/bit_utils" }
lz78 = { path = "./crates/lz78" }

[package]
name = "infteor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
huffman = { workspace = true, features = ["logging"]}
lz78 = { workspace = true }
