[package]
name = "infteor-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
zip = { workspace = true }
anyhow = "1.0.93"

[dependencies.infteor]
path = ".."

[[bin]]
name = "bit_io"
path = "fuzz_targets/bit_io.rs"
test = false
doc = false
bench = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false
